Uncovering old css bugs

--- a/.mb/themes/wide/layout.css
+++ b/.mb/themes/wide/layout.css
@@ -1,5 +1,4 @@
 /* STANDARD LAYOUT */
-html {color:var(--fg);background-color:var(--bg);}
 html,body,nav,header,article,footer{float:left;height:auto;clear:both;display:block;max-width:100%;width:100%;overflow:auto;}
 
 
@@ -18,7 +17,7 @@ header {width:var(--full-page);}
 header {height:var(--header-height);line-height:var(--header-height);}
 header {margin-left:var(--left-gap);margin-right:var(--right-gap);}
 header {padding-left:var(--left-start);}
-header {color:var(--header-fg);background-color:var(--header-bg);overflow:hidden;}
+header {overflow:hidden;}
 /* Prevent word wrap from occurring; it can look bad on smaller screens. */
 header {white-space:nowrap;}
 
@@ -28,15 +27,13 @@ nav {width:var(--full-page);}
 nav {height:var(--nav-height);line-height:var(--nav-height);}
 nav {margin-left:var(--left-gap);margin-right:var(--right-gap);}
 nav {padding-left:var(--left-start);}
-nav {color:var(--nav-fg); background-color:var(--nav-bg); }
 nav {white-space:nowrap;}
 
 
 /* ARTICLE */
 article {margin-left:var(--left-gap);margin-right:var(--right-gap);}
-article {max-width:var(--full-page);}
+article {width:var(--full-page);max-width:var(--full-page);}
 article {padding-left:var(--left-start);}
-article {color:var(--article-fg);background-color:var(--article-bg);} 
 /* float and clear left means a right sidebar,and vice-versa */
 article {clear:left;}
 
@@ -44,13 +41,11 @@ article {clear:left;}
 /* ASIDE */
 aside {border-bottom:none;}
 aside {width:var(--max-aside-width);}
-aside {color:var(--aside-fg);background-color:var(--aside-bg);}
 
 
 /* FOOTER */
 footer {width:var(--full-page);}
 footer {margin-left:var(--left-gap);margin-right:var(--right-gap);}
 footer {padding-left:var(--left-start);}
-footer {color:var(--footer-fg);background-color:var(--footer-bg);}
 
 
