--- a/.mb/themes/wide/theme-dark.css
+++ b/.mb/themes/wide/theme-dark.css
@@ -23,13 +23,14 @@
 	
 		/* Default foreground (text) and background colors  */
 		--fg:white;
-		--bg:#0D0630; /* #3700B36200EE; Darker blue ("Primary variant: #3700B3; */
+		--bg:black;
     /* Default link colors */
-    --a: white;
-    --a-link: --var(--a);
-    --a-visited: --var(--a);
-    --a-hover: --var(--a);
-    --a-active: --var(--a);
+    --a:blue;
+    --a-link: var(--a);
+    --a-visited: var(--a);
+    --a-hover: var(--a);
+    --a-active: var(--a);
+
 
 		/* Secondary foreground (text) and background colors for accents. */
 		--trim-fg: #201D3A;
@@ -71,11 +72,11 @@
 		--aside-fg:var(--fg);
 		--aside-bg:var(--bg);
     /* Link colors specific to sidebar */
-    --a-sidebar: var(--a); 
-    --a-sidebar-link:  var(--a);
-    --a-sidebar-visited:  var(--a);
-    --a-sidebar-hover: var(--a); 
-    --a-sidebar-active:  var(--a);
+    --a-aside: var(--a); 
+    --a-aside-link:  var(--a);
+    --a-aside-visited:  var(--a);
+    --a-aside-hover: var(--a); 
+    --a-aside-active:  var(--a);
 
 
 		/* Primary foreground (text) and background colors in footer */
@@ -90,25 +91,26 @@
 
 }
 
-header {color:var(--header-fg);background-color:var(--header-bg;}
+header {color:var(--header-fg);background-color:var(--header-bg);}
 header > ul > li:first-child > a {color:var(--trim-bg);}
 
 
 header > ul > li > a,
 header > ul > li > a:link,
 header > ul > li > a:visited
-	{color:var(---a-header);}
+	{color:var(--a-header);}
 header > ul > li > a:hover,
 header > ul > li > a:active
 	{color:var(--a-header);}
 
 
-nav {color:var(--nav-fg);background-color:var(--nav-bg;}
+nav {color:var(--nav-fg);background-color:var(--nav-bg);}
 nav > ul > li > a,
 nav > ul > li > a:link,
 nav > ul > li > a:visited {color:var(--a-nav);} 
 
-article {color:var(--article-fg);background-color:var(--article-bg;}
+article > p > a {color:var(--a);}
+article {color:var(--article-fg);background-color:var(--article-bg);}
 article > table > thead > tr > th {color:var(--header-bg);background-color:var(--header-fg);}
 
 article > h2 {color:var(--fg);}
@@ -128,7 +130,7 @@ aside > ul > li > a,
 aside > ul > li > a:link,
 aside > ul > li > a:visited {color:var(--a-aside);} 
 
-footer {color:var(--footer-fg);background-color:var(--footer-bg;}
+footer {color:var(--footer-fg);background-color:var(--footer-bg);}
 /* Color of links in main rows (body) of table */
 footer > table > tbody > tr > td > a:link,
 footer > table > tbody > tr > td > a:visited
