--- a/.mb/themes/wide/wide.css
+++ b/.mb/themes/wide/wide.css
@@ -105,7 +105,7 @@ article > blockquote > p {font-family:var(--formal)}
 /* ASIDE */
 aside {margin: 10% 2rem 2rem 2rem;}
 aside > h2 {padding:1em;text-align:center;font-size:1.2rem;font-weight:700;}
-aside > h3 {font-size:.75em;font-weight:bold;margin-bottom:2;}
+aside > h3 {font-size:.75em;font-weight:bold;margin-bottom:2em;}
 aside > ul {text-align:right;margin-right:1rem;line-height:1.5em;}
 aside > ul > li {list-style-type:none;} 
 aside > ul > li > a,
